2004-09-20  Tomer Levi  <Tomer.Levi@nsc.com>

        * config/tc-crx.c (handle_LoadStor): New function. 
	Handle load/stor unique instructions before parsing. 

2004-09-17  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (s_arm_rel31): New funciton.
	(md_pseudo_table): Add .rel31.
	(md_apply_fix3): Handle BFD_RELOC_ARM_TARGET2, 
	BFD_RELOC_32_PCREL and BFD_RELOC_ARM_PREL31.
	(tc_gen_reloc): Handle BFD_RELOC_ARM_PREL31 and BFD_RELOC_ARM_TARGET2.
	(arm_fix_adjustable): Return 0 for BFD_RELOC_ARM_TARGET2.
	(arm_parse_reloc): Add (target2).

2004-09-17  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.
	* po/gas.pot: Regenerate.

2004-09-14  Hideki IWAMOTO  <h-iwamoto@kit.hi-ho.ne.jp>

	* config/tc-mmix.c [!LLONG_MIN]: Correct #elsif to #elif.
	[!LLONG_MAX]: Ditto.

2004-09-13  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c: Rename RELABS to TARGET1.

2004-09-13  Alan Modra  <amodra@bigpond.net.au>

	* messages.c (as_internal_value_out_of_range): Cast values passed
	to as_bad_where or as_warn_where to proper type.

2004-09-11  Theodore A. Roth  <troth@openavr.org>

	* config/tc-avr.c: Add support for
	atmega48, atmega88, atmega168, attiny13, attiny2313, at90can128.

2004-09-09  Alan Modra  <amodra@bigpond.net.au>

	* dw2gencfi.c (select_cie_for_fde): When separating CIE out
	from FDE, treat a CFI_escape as we do a DW_CFA_advance_loc.

2004-09-08  Paul Brook  <paul@codesourcery.com>

	* config/obj-elf.c (obj_elf_section_type): Handle init_array,
	fini_array and preinit_array section types.
	* config/tc-ia64.c (ia64_elf_section_type): Remove init_array
	and fini_array.
	* doc/as.texinfo: Document extra section types.

2004-09-02  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.am (TARG_ENV_HFILES): Add te-symbian.h.
	* Makefile.in: Regenerated.